<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_avoidence</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2410485087@qq.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>dnn_node</depend>
  <depend>std_msgs</depend>
  <depend>hbm_img_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ai_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
